# Prog2kurs

./: README.md
two_sum, two_sum_hashed/: main.py
Калькулятор/: calcprint.py  calculate_test.py  main.py  output.txt  params.ini  pyproject.toml
ЛР5.6-4сем/: decorator.py  example.db  main.py  zhukov.db
ЛР7.8-4сем/: main.py  templates.py  zhukov.db
